# ses_wrapper

./: README.md  pyproject.toml
src/ses_emailer/: __init__.py  ses_email.py
