[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ses-emailer"
version = "0.1.0"
description = "Tiny Amazon SES SMTP helper with CC/BCC, attachments, and HTML support."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Vairavan K" }]
keywords = ["ses", "email", "smtp", "aws", "mailer"]
dependencies = []

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
]

[project.urls]
Homepage = "https://github.com/VairavanK/ses_wrapper"
Repository = "https://github.com/VairavanK/ses_wrapper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
